--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -47,11 +47,11 @@
       <section class="welcome my-2.5" id="1">
         <h1 class="text-2xl sm:text-3xl font-bold my-2">Welcome to <span class="logo text-[#8ab377]">PlanIT.</span></h1>
         <hr class="h-0.5 bg-gray-400 my-1">
-        <p>PlanIT is a advanced Task manager web app with support of of course, <a href="tasks.html" id="tasks"
+        <p>PlanIT is a advanced Task manager web app with support of of course, <a href="tasks" id="tasks"
             class="cursor-pointer underline font-medium tracking-tighter sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">Task manager with
-            Priority manager</a>, <a href="reminders.html" id="reminders"
+            Priority manager</a>, <a href="reminders" id="reminders"
             class="cursor-pointer underline font-medium tracking-tighter sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">Reminder manager</a> and a <a
-            href="clock.html" id="clock" class="cursor-pointer underline font-medium tracking-tighter sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">clock
+            href="clock" id="clock" class="cursor-pointer underline font-medium tracking-tighter sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">clock
             screensaver</a> for all your planning needs. <br> This documentation lets you know how exactly you can use
           PlanIT to maximize your productivity.</p>
       </section>
@@ -160,7 +160,7 @@
       <section class="clock" id="4">
         <h2 class="font-semibold text-xl text-[#679156] my-2 tracking-tighter">Navigating to the Clock screensaver:</h2>
         <article>
-          The <a href="clock.html" class="underline tracking-tighter font-medium cursor-pointer sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">Clock screensaver</a> is a screensaver which shows you the current time in real time, keeping
+          The <a href="clock" class="underline tracking-tighter font-medium cursor-pointer sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">Clock screensaver</a> is a screensaver which shows you the current time in real time, keeping
           you
           updated to the exact moment of the day.
           <p>
