--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -35,7 +35,7 @@
             </div>
         </form>
         <div class="mt-4">
-            <a href="#" class="text-blue-500 hover:underline">Forgot Password</a>
+            <a href="/forgot-password" class="text-blue-500 hover:underline">Forgot Password</a>
         </div>
         <div class="mt-4">
             <p>Don't have an account? <a href="Sign-up" class="text-blue-500 hover:underline">Sign up</a></p>
